Ensure fonts are visible during page load in modern browsers
Pointed out by page insights
ONLINE-533

--- a/themes/reactos/static/css/font-roboto.css
+++ b/themes/reactos/static/css/font-roboto.css
@@ -8,6 +8,7 @@
   src: local('Roboto Light'), local('Roboto-Light'),
        url('../fonts/roboto-v20-latin-300.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/roboto-v20-latin-300.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  font-display: swap;
 }
 
 /* roboto-300italic - latin */
@@ -18,6 +19,7 @@
   src: local('Roboto Light Italic'), local('Roboto-LightItalic'),
        url('../fonts/roboto-v20-latin-300italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/roboto-v20-latin-300italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  font-display: swap;
 }
 
 /* roboto-regular - latin */
@@ -28,6 +30,7 @@
   src: local('Roboto'), local('Roboto-Regular'),
        url('../fonts/roboto-v20-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/roboto-v20-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  font-display: swap;
 }
 
 /* roboto-italic - latin */
@@ -38,6 +41,7 @@
   src: local('Roboto Italic'), local('Roboto-Italic'),
        url('../fonts/roboto-v20-latin-italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/roboto-v20-latin-italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  font-display: swap;
 }
 
 /* roboto-700 - latin */
@@ -48,6 +52,7 @@
   src: local('Roboto Bold'), local('Roboto-Bold'),
        url('../fonts/roboto-v20-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/roboto-v20-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  font-display: swap;
 }
 
 /* roboto-700italic - latin */
@@ -58,4 +63,5 @@
   src: local('Roboto Bold Italic'), local('Roboto-BoldItalic'),
        url('../fonts/roboto-v20-latin-700italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/roboto-v20-latin-700italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  font-display: swap;
 }
